# 2sem-Lab4Akinator-C

./: CMakeLists.txt  README.md  sonar-project.properties
Lab4Akinator/: CMakeLists.txt  check.c  check.h  functions.c  functions.h  game.c  game.h  log.c  log.h  main.c  memory.c  memory.h  menu.c  menu.h  tree.c  tree.h
