cmake_minimum_required(VERSION 3.24)
project(2sem-Lab4Akinator-C)

set(CMAKE_C_STANDARD 99)

add_executable(2sem-Lab4Akinator-C Lab4Akinator/main.c Lab4Akinator/tree.c Lab4Akinator/tree.h Lab4Akinator/functions.h Lab4Akinator/log.c Lab4Akinator/log.h Lab4Akinator/functions.c Lab4Akinator/menu.c Lab4Akinator/menu.h Lab4Akinator/memory.c Lab4Akinator/memory.h Lab4Akinator/check.c Lab4Akinator/check.h)
